--- a/lesson8/simple_tracker/prj.conf
+++ b/lesson8/simple_tracker/prj.conf
@@ -7,7 +7,8 @@
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_NEWLIB_LIBC=y
-CONFIG_LOG=y
+CONFIG_FPU=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -18,17 +19,24 @@ CONFIG_NET_SOCKETS_POSIX_NAMES=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-
+CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
+CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
+# Request eDRX from the network
+CONFIG_LTE_EDRX_REQ=y
+# PSM requested periodic TAU 8 hours
+CONFIG_LTE_PSM_REQ_RPTAU="00101000"
+# PSM requested active time 6 seconds
+CONFIG_LTE_PSM_REQ_RAT="00000011"
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
+CONFIG_MODEM_KEY_MGMT=y
 
 # AT Host
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_AT_HOST_LIBRARY=n
-
 # CoAP
 CONFIG_COAP=y
-
+# Buttons and LED library
 CONFIG_DK_LIBRARY=y
-CONFIG_COAP_GET_RESOURCE="large-update"
-CONFIG_COAP_PUT_RESOURCE="large-update"
+
+
