Updated step numbers and comments

--- a/lesson4/cellfund_less4_exer1/prj.conf
+++ b/lesson4/cellfund_less4_exer1/prj.conf
@@ -21,7 +21,7 @@ CONFIG_NRF_MODEM_LIB=y
 # STEP 2.1 - Enable and configure the MQTT library 
 
 
-# STEP 2.2 - Configure the broker name, its TCP port, topics name, and the message to be sent
+# STEP 2.2 - Configure the broker name, its TCP port, topic names, and message
 
 
 # Button support
