--- a/lesson4/cellfund_less4_exer1_solution/prj.conf
+++ b/lesson4/cellfund_less4_exer1_solution/prj.conf
@@ -23,7 +23,7 @@ CONFIG_MQTT_LIB=y
 CONFIG_MQTT_LIB_TLS=n
 CONFIG_MQTT_CLEAN_SESSION=y
 
-# STEP 2.2 - Configure the broker name, its TCP port, topics name, and the message to be sent
+# STEP 2.2 - Configure the broker name, its TCP port, topic names, and message
 CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
 CONFIG_MQTT_BROKER_PORT=1883
 CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
