--- a/lesson3/cellfund_less3_exer1/prj.conf
+++ b/lesson3/cellfund_less3_exer1/prj.conf
@@ -18,6 +18,9 @@ CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 
+#Newlib
+CONFIG_NEWLIB_LIBC=y
+
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 
