Updated step numbers and added steps

--- a/lesson2/cellfund_less2_exer2/prj.conf
+++ b/lesson2/cellfund_less2_exer2/prj.conf
@@ -7,20 +7,25 @@
 # Logging
 CONFIG_LOG=y
 
-# STEP 2.1 - Enable networking and increase the memory heap
 # Network
+CONFIG_NETWORKING=y
+CONFIG_NET_NATIVE=n
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 
 # Increase memory heap
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
-# STEP 2.2 - Enable the nRF Modem library
+# STEP 2 - Enable the nRF Modem library
 # Modem library
 
-# STEP 2.3 - Enable the LTE link controller library
+# STEP 3 - Enable the LTE link controller library
 # LTE link control
 
+# STEP 11 - Enable the AT Host library
 # AT commands interface
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_AT_HOST_LIBRARY=y
 
 # DK
 CONFIG_DK_LIBRARY=y
