--- a/lesson2/cellfund_less2_exer2_solution/prj.conf
+++ b/lesson2/cellfund_less2_exer2_solution/prj.conf
@@ -7,7 +7,6 @@
 # Logging
 CONFIG_LOG=y
 
-# STEP 2.1 - Enable networking and increase the memory heap
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -19,18 +18,19 @@ CONFIG_HEAP_MEM_POOL_SIZE=8192
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
-# STEP 2.2 - Enable the nRF Modem library
+# STEP 2 - Enable the nRF Modem library
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 
-# STEP 2.3 - Enable the LTE link controller library
+# STEP 3 - Enable the LTE link controller library
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
+# STEP 11 - Enable the AT Host library
 # AT commands interface
-CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_AT_HOST_LIBRARY=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # DK
 CONFIG_DK_LIBRARY=y
