--- a/lesson5/cellfund_less5_exer2_solution/prj.conf
+++ b/lesson5/cellfund_less5_exer2_solution/prj.conf
@@ -21,7 +21,7 @@ CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
-
+CONFIG_MODEM_KEY_MGMT=y
 # AT Host
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_AT_HOST_LIBRARY=n
