--- a/lesson5/cellfund_less5_exer2_solution/Kconfig
+++ b/lesson5/cellfund_less5_exer2_solution/Kconfig
@@ -6,25 +6,25 @@
 
 menu "nRF CoAP client sample"
 
-config COAP_RX_RESOURCE
-	string "CoAP resource - this is the RX channel of the board"
-	default "validate"
+config COAP_SERVER_HOSTNAME
+	string "CoAP server hostname"
+
+config COAP_SERVER_PORT
+	int "CoAP server port"
+	default 5683
 
 config COAP_TX_RESOURCE
 	string "CoAP resource - this is the TX channel of the board"
 	default "large-update"
 
+config COAP_RX_RESOURCE
+	string "CoAP resource - this is the RX channel of the board"
+	default "validate"
+
+# STEP 2 - Define two new DTLS related configurations 
 config COAP_DEVICE_NAME
 	string "Device resource name - this will be the device name on the CoAP server"
-	default "cali.Test.nRF9160"
-
-config COAP_SERVER_HOSTNAME
-	string "CoAP server hostname"
-	default "californium.eclipseprojects.io"
-
-config COAP_SERVER_PORT
-	int "CoAP server port"
-	default 5684
+	default "cali.test.nrf9160"
 	
 config COAP_SERVER_PSK
 	string "Server PSK"
