--- a/lesson5/cellfund_less5_exer2_solution/Kconfig
+++ b/lesson5/cellfund_less5_exer2_solution/Kconfig
@@ -21,11 +21,12 @@ config COAP_RX_RESOURCE
 	string "CoAP resource - this is the RX channel of the board"
 	default "validate"
 
-# STEP 2 - Define two new DTLS related configurations 
+# STEP 2.1 - Define the PSK Identity configuration
 config COAP_DEVICE_NAME
 	string "Device resource name - this will be the device name on the CoAP server"
 	default "cali.test.nrf9160"
-	
+
+# STEP 2.2 - Define the PSK Secret configuration	
 config COAP_SERVER_PSK
 	string "Server PSK"
 	default "2e666f726e69756d"
