Finalized code and added steps

--- a/lesson6/cellfund_less6_exer1_solution/prj.conf
+++ b/lesson6/cellfund_less6_exer1_solution/prj.conf
@@ -6,6 +6,7 @@
 
 # General config
 CONFIG_NEWLIB_LIBC=y
+# STEP 2.2 - Enable printing of floating-points
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
 
@@ -26,6 +27,7 @@ CONFIG_MAIN_STACK_SIZE=4096
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+# STEP 2.1 - Enable modem GPS mode
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
 
 # Modem library
