--- a/lesson6/cellfund_less6_exer1_solution/Kconfig
+++ b/lesson6/cellfund_less6_exer1_solution/Kconfig
@@ -7,7 +7,7 @@
 menu "cellfund Lesson 6 Exercise 1"
 
 
-
+# STEP 3.1 - Define configuration for fix interval
 config GNSS_PERIODIC_INTERVAL
 	int "Fix interval for periodic GPS fixes"
 	range 10 65535
@@ -15,6 +15,7 @@ config GNSS_PERIODIC_INTERVAL
 	help
 	  Fix interval (in seconds) for periodic fixes.
 
+# STEP 3.2 - Define configuration for fix timeout
 config GNSS_PERIODIC_TIMEOUT
 	int "Fix timeout for periodic GPS fixes"
 	range 0 65535
