--- a/lesson4/cellfund_less4_exer1/CMakeLists.txt
+++ b/lesson4/cellfund_less4_exer1/CMakeLists.txt
@@ -7,12 +7,9 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(cellfund_less4_exer1)
+project(cellular_fundamentals)
 
 # NORDIC SDK APP START
 target_sources(app PRIVATE src/mqtt_connection.c)
 target_sources(app PRIVATE src/main.c)
-
 # NORDIC SDK APP END
-
-zephyr_include_directories(src)
