--- a/lesson6/cellfund_less6_exer2/CMakeLists.txt
+++ b/lesson6/cellfund_less6_exer2/CMakeLists.txt
@@ -7,7 +7,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(cellfund_less6_exer2)
+project(cellular_fundamentals)
 
 # NORDIC SDK APP START
 target_sources(app PRIVATE src/main.c)
