--- a/lesson2/cellfund_less2_exer2/prj.conf
+++ b/lesson2/cellfund_less2_exer2/prj.conf
@@ -7,24 +7,25 @@
 # Logging
 CONFIG_LOG=y
 
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 
-# STEP 2 - Enable the nRF Modem library
 # Modem library
+# STEP 2 - Enable the nRF Modem library
 
-# STEP 3 - Enable the LTE link controller library
 # LTE link control
+# STEP 3 - Enable the LTE link controller library
 
-# STEP 11 - Enable the AT Host library
 # AT commands interface
-
-# DK
-CONFIG_DK_LIBRARY=y
+# STEP 11 - Enable the AT Host library
