--- a/lesson2/cellfund_less2_exer2_solution/prj.conf
+++ b/lesson2/cellfund_less2_exer2_solution/prj.conf
@@ -7,6 +7,9 @@
 # Logging
 CONFIG_LOG=y
 
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -14,23 +17,22 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 
-# STEP 2 - Enable the nRF Modem library
 # Modem library
+# STEP 2 - Enable the nRF Modem library
 CONFIG_NRF_MODEM_LIB=y
 
-# STEP 3 - Enable the LTE link controller library
 # LTE link control
+# STEP 3 - Enable the LTE link controller library
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
-# STEP 11 - Enable the AT Host library
 # AT commands interface
+# STEP 11 - Enable the AT Host library
 CONFIG_AT_HOST_LIBRARY=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
-# DK
-CONFIG_DK_LIBRARY=y
+
