--- a/lesson3/cellfund_less3_exer1_solution/prj.conf
+++ b/lesson3/cellfund_less3_exer1_solution/prj.conf
@@ -7,6 +7,9 @@
 # Logging
 CONFIG_LOG=y
 
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -14,7 +17,7 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 
@@ -25,5 +28,4 @@ CONFIG_NRF_MODEM_LIB=y
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
-# Button support
-CONFIG_DK_LIBRARY=y
+
