--- a/lesson4/cellfund_less4_exer1/prj.conf
+++ b/lesson4/cellfund_less4_exer1/prj.conf
@@ -4,6 +4,15 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+# Logging
+CONFIG_LOG=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
+CONFIG_NEWLIB_LIBC=y
+
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -11,28 +20,20 @@ CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# LTE link control
-CONFIG_LTE_LINK_CONTROL=y
-CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-
-# Modem library
-CONFIG_NRF_MODEM_LIB=y
-
-# STEP 2.1 - Enable and configure the MQTT library 
-
-
-# STEP 2.2 - Configure the broker name, its TCP port, topic names, and message
-
-
-# Button support
-CONFIG_DK_LIBRARY=y
-
-# Enable logging
-CONFIG_LOG=y
-
 # Memory
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_HEAP_MEM_POOL_SIZE=2048
 
-# NewLib C
-CONFIG_NEWLIB_LIBC=y
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
+
+# LTE link control
+CONFIG_LTE_LINK_CONTROL=y
+CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+
+# MQTT
+# STEP 2.1 - Enable and configure the MQTT library 
+
+# Application
+# STEP 2.2 - Configure the broker name, TCP port, topic names, and message
+
