--- a/lesson4/cellfund_less4_exer1_solution/prj.conf
+++ b/lesson4/cellfund_less4_exer1_solution/prj.conf
@@ -4,6 +4,15 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+# Logging
+CONFIG_LOG=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
+CONFIG_NEWLIB_LIBC=y
+
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -11,34 +20,29 @@ CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# LTE link control
-CONFIG_LTE_LINK_CONTROL=y
-CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-
-# Modem library
-CONFIG_NRF_MODEM_LIB=y
-
-# STEP 2.1 - Enable and configure the MQTT library 
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_LIB_TLS=n
-CONFIG_MQTT_CLEAN_SESSION=y
-
-# STEP 2.2 - Configure the broker name, its TCP port, topic names, and message
-CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
-CONFIG_MQTT_BROKER_PORT=1883
-CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
-CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
-CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF9160 SiP"
-
-# Button support
-CONFIG_DK_LIBRARY=y
-
-# Enable logging
-CONFIG_LOG=y
-
 # Memory
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_HEAP_MEM_POOL_SIZE=2048
 
-# NewLib C
-CONFIG_NEWLIB_LIBC=y
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
+
+# LTE link control
+CONFIG_LTE_LINK_CONTROL=y
+CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+
+# MQTT
+# STEP 2.1 - Enable and configure the MQTT library 
+CONFIG_MQTT_LIB=y
+CONFIG_MQTT_CLEAN_SESSION=y
+
+# Application
+# STEP 2.2 - Configure the broker name, TCP port, topic names, and message
+CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
+CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
+CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF9160 SiP"
+CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
+CONFIG_MQTT_BROKER_PORT=1883
+
+
+
