--- a/lesson4/cellfund_less4_exer2_solution/prj.conf
+++ b/lesson4/cellfund_less4_exer2_solution/prj.conf
@@ -4,44 +4,45 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+# Logging
+CONFIG_LOG=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
+CONFIG_NEWLIB_LIBC=y
+
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# LTE link control
-CONFIG_LTE_LINK_CONTROL=y
-CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+# Memory
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 # STEP 2.3 - Enable the nRF9160 modem key management library
 CONFIG_MODEM_KEY_MGMT=y
 
+# LTE link control
+CONFIG_LTE_LINK_CONTROL=y
+CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+
+# MQTT
 CONFIG_MQTT_LIB=y
 CONFIG_MQTT_CLEAN_SESSION=y
 # STEP 2.1 - Enable TLS for the MQTT library 
 CONFIG_MQTT_LIB_TLS=y
 
-
-CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
-# STEP 2.2 - Change the MQTT broker port
-CONFIG_MQTT_BROKER_PORT=8883
+# Application
 CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
 CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
 CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF9160 SiP"
-
-# Button support
-CONFIG_DK_LIBRARY=y
-
-# Enable logging
-CONFIG_LOG=y
-
-# Memory
-CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_HEAP_MEM_POOL_SIZE=2048
-
-# NewLib C
-CONFIG_NEWLIB_LIBC=y
+CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
+# STEP 2.2 - Change the MQTT broker port
+CONFIG_MQTT_BROKER_PORT=8883
