--- a/lesson5/cellfund_less5_exer1/prj.conf
+++ b/lesson5/cellfund_less5_exer1/prj.conf
@@ -7,17 +7,22 @@
 # Logging
 CONFIG_LOG=y
 
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# NewLib C
+CONFIG_NEWLIB_LIBC=y
+
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_NEWLIB_LIBC=y
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
@@ -25,9 +30,6 @@ CONFIG_NRF_MODEM_LIB=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-
-# Button support
-CONFIG_DK_LIBRARY=y
 
 # CoAP 
 # STEP 2.1 - Enable the CoAP library
