--- a/lesson6/cellfund_less6_exer1_solution/prj.conf
+++ b/lesson6/cellfund_less6_exer1_solution/prj.conf
@@ -4,36 +4,36 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# General config
+# Logging
+CONFIG_LOG=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
 CONFIG_NEWLIB_LIBC=y
 # STEP 2.2 - Enable printing of floating-points
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
 
-# Logging
-CONFIG_LOG=y
-
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-#Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
+
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 # STEP 2.1 - Enable modem GPS mode
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
-
-# Modem library
-CONFIG_NRF_MODEM_LIB=y
-
-# Buttons and LED library
-CONFIG_DK_LIBRARY=y
 
 
