--- a/lesson6/cellfund_less6_exer2_solution/prj.conf
+++ b/lesson6/cellfund_less6_exer2_solution/prj.conf
@@ -4,38 +4,38 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# General config
-CONFIG_NEWLIB_LIBC=y
-CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
-CONFIG_FPU=y
-
 # Logging
 CONFIG_LOG=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
+CONFIG_NEWLIB_LIBC=y
+# STEP 2.2 - Enable printing of floating-points
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_FPU=y
 
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-#Increase memory heap
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
+
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
-
 # STEP 7.1 - Request eDRX from the network
 CONFIG_LTE_EDRX_REQ=y
-# STEP 7.2 - Request PSM periodic TAU 8 hours, active time 14 seconds
+# STEP 7.2 - Request PSM periodic TAU and active time
 CONFIG_LTE_PSM_REQ_RPTAU="00101000"
-CONFIG_LTE_PSM_REQ_RAT="00000111"
-
-# Modem library
-CONFIG_NRF_MODEM_LIB=y
-
-# Buttons and LED library
-CONFIG_DK_LIBRARY=y
+CONFIG_LTE_PSM_REQ_RAT="00001000"
