Changed menu name in Kconfig

--- a/lesson6/cellfund_less6_exer1/Kconfig
+++ b/lesson6/cellfund_less6_exer1/Kconfig
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-menu "cellfund Lesson 6 Exercise 1"
+menu "cellfund Lesson 6 Exercise"
 
 
 # STEP 3.1 - Define configuration for fix interval
