--- a/lesson5/cellfund_less5_exer2/prj.conf
+++ b/lesson5/cellfund_less5_exer2/prj.conf
@@ -7,29 +7,30 @@
 # Logging
 CONFIG_LOG=y
 
-# Network
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
+CONFIG_NEWLIB_LIBC=y
+
+# Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
-# Increase memory heap
-CONFIG_HEAP_MEM_POOL_SIZE=4096
+# Memory
 CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_NEWLIB_LIBC=y
+CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 # STEP 4.1 - Enable the Modem key management library
 
-
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-
-# Button support
-CONFIG_DK_LIBRARY=y
 
 # CoAP 
 CONFIG_COAP=y
