--- a/lesson8/simple_tracker_0.2/prj.conf
+++ b/lesson8/simple_tracker_0.2/prj.conf
@@ -3,14 +3,19 @@
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
-# General config
-CONFIG_HEAP_MEM_POOL_SIZE=8192
-CONFIG_MAIN_STACK_SIZE=8192
+
+# Logging
+CONFIG_LOG=y
+CONFIG_LOG_PRINTK=y
+
+# Button and LED support
+CONFIG_DK_LIBRARY=y
+
+# Newlib
 CONFIG_NEWLIB_LIBC=y
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
-CONFIG_LOG=y
-CONFIG_LOG_PRINTK=y
+
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
@@ -18,21 +23,22 @@ CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
+# Memory
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
+CONFIG_MODEM_KEY_MGMT=y
+
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
 
-# Modem library
-CONFIG_NRF_MODEM_LIB=y
-CONFIG_MODEM_KEY_MGMT=y
-# AT Host
-CONFIG_UART_INTERRUPT_DRIVEN=y
+# AT commands interface
 CONFIG_AT_HOST_LIBRARY=n
+CONFIG_UART_INTERRUPT_DRIVEN=y
+
 # CoAP
 CONFIG_COAP=y
-# Buttons and LED library
-CONFIG_DK_LIBRARY=y
-
-
-
