Added steps two in prj.conf

--- a/lesson3/cellfund_less3_exer1_solution/prj.conf
+++ b/lesson3/cellfund_less3_exer1_solution/prj.conf
@@ -11,8 +11,10 @@ CONFIG_LOG=y
 CONFIG_DK_LIBRARY=y
 
 # Network
+# STEP 2.1 - Configure the Zephyr networking API
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
+# STEP 2.2 - Enable and configure the BSD sockets compatible API
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
