--- a/lesson3/cellfund_less3_exer1/prj.conf
+++ b/lesson3/cellfund_less3_exer1/prj.conf
@@ -11,11 +11,10 @@ CONFIG_LOG=y
 CONFIG_DK_LIBRARY=y
 
 # Network
-CONFIG_NETWORKING=y
-CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS=y
-CONFIG_NET_SOCKETS_OFFLOAD=y
-CONFIG_NET_SOCKETS_POSIX_NAMES=y
+# STEP 2.1 - Configure the Zephyr networking API
+
+# STEP 2.2 - Enable and configure the BSD sockets compatible API
+
 
 # Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
