--- a/lesson4/cellfund_less4_exer2/prj.conf
+++ b/lesson4/cellfund_less4_exer2/prj.conf
@@ -41,6 +41,6 @@ CONFIG_MQTT_CLEAN_SESSION=y
 CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
 CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
 CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF9160 SiP"
-CONFIG_MQTT_BROKER_HOSTNAME="mqtt.eclipseprojects.io"
+CONFIG_MQTT_BROKER_HOSTNAME="test.mosquitto.org"
 # STEP 2.2 - Change the MQTT broker port
 CONFIG_MQTT_BROKER_PORT=1883
