--- a/lesson6/cellfund_less6_exer1/prj.conf
+++ b/lesson6/cellfund_less6_exer1/prj.conf
@@ -21,7 +21,7 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
- Memory
+# Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
 
