--- a/lesson4/cellfund_less4_exer1/prj.conf
+++ b/lesson4/cellfund_less4_exer1/prj.conf
@@ -26,14 +26,16 @@ CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
+# CONFIG_NRF_MODEM_LIB_SYS_INIT is deprecated, and kept for compatibility with older NCS versions
+CONFIG_NRF_MODEM_LIB_SYS_INIT=n
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
+# CONFIG_LTE_AUTO_INIT_AND_CONNECT is deprecated, and kept for compatibility with older NCS versions
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
 # MQTT
-# STEP 2.1 - Enable and configure the MQTT library 
+# STEP 2.1 - Enable and configure the MQTT library
 
 # Application
 # STEP 2.2 - Configure the broker name, TCP port, topic names, and message
-
