--- a/lesson5/cellfund_less5_exer1_solution/prj.conf
+++ b/lesson5/cellfund_less5_exer1_solution/prj.conf
@@ -26,12 +26,15 @@ CONFIG_MAIN_STACK_SIZE=4096
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
+# CONFIG_NRF_MODEM_LIB_SYS_INIT is deprecated, and kept for compatibility with older NCS versions
+CONFIG_NRF_MODEM_LIB_SYS_INIT=n
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
+# CONFIG_LTE_AUTO_INIT_AND_CONNECT is deprecated, and kept for compatibility with older NCS versions
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
-# CoAP 
+# CoAP
 # STEP 2.1 - Enable the CoAP library
 CONFIG_COAP=y
 
