--- a/lesson5/cellfund_less5_exer2_solution/prj.conf
+++ b/lesson5/cellfund_less5_exer2_solution/prj.conf
@@ -26,14 +26,18 @@ CONFIG_MAIN_STACK_SIZE=4096
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
+# CONFIG_NRF_MODEM_LIB_SYS_INIT is deprecated, and kept for compatibility with older NCS versions
+CONFIG_NRF_MODEM_LIB_SYS_INIT=n
+
 # STEP 4.1 - Enable the Modem key management library
 CONFIG_MODEM_KEY_MGMT=y
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
+# CONFIG_LTE_AUTO_INIT_AND_CONNECT is deprecated, and kept for compatibility with older NCS versions
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
-# CoAP 
+# CoAP
 CONFIG_COAP=y
 CONFIG_COAP_SERVER_HOSTNAME="californium.eclipseprojects.io"
 CONFIG_COAP_TX_RESOURCE="large-update"
