--- a/v2.2.0-v2.3.0/lesson7/cellfund_less7_exer1_solution/prj.conf
+++ b/v2.2.0-v2.3.0/lesson7/cellfund_less7_exer1_solution/prj.conf
@@ -26,7 +26,7 @@ CONFIG_MAIN_STACK_SIZE=4096
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
-# STEP 2 - Enable modem tracing 
+# STEP 2 - Enable modem tracing and the AT Host library
 CONFIG_NRF_MODEM_LIB_TRACE=y
 CONFIG_MODEM_KEY_MGMT=y
 
