--- a/v2.4.0/lesson7/cellfund_less7_exer1_solution/prj.conf
+++ b/v2.4.0/lesson7/cellfund_less7_exer1_solution/prj.conf
@@ -28,8 +28,9 @@ CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_NRF_MODEM_LIB=y
 # CONFIG_NRF_MODEM_LIB_SYS_INIT is deprecated, and kept for compatibility with older NCS versions
 CONFIG_NRF_MODEM_LIB_SYS_INIT=n
-# STEP 2 - Enable modem tracing
+# STEP 2 - Enable modem tracing and the AT Host library
 CONFIG_NRF_MODEM_LIB_TRACE=y
+CONFIG_AT_HOST_LIBRARY=y
 
 CONFIG_MODEM_KEY_MGMT=y
 
