--- a/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer2_solution/prj.conf
+++ b/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer2_solution/prj.conf
@@ -29,7 +29,7 @@ CONFIG_NRF_MODEM_LIB=y
 # CONFIG_NRF_MODEM_LIB_SYS_INIT is deprecated, and kept for compatibility with older NCS versions
 CONFIG_NRF_MODEM_LIB_SYS_INIT=n
 
-# STEP 2.3 - Enable the nRF9160 modem key management library
+# STEP 2.3 - Enable the modem key management library
 CONFIG_MODEM_KEY_MGMT=y
 
 # LTE link control
@@ -46,7 +46,7 @@ CONFIG_MQTT_LIB_TLS=y
 # Application
 CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
 CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
-CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF9160 SiP"
+CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from nRF91 Series device"
 CONFIG_MQTT_BROKER_HOSTNAME="test.mosquitto.org"
 # STEP 2.2 - Change the MQTT broker port
 CONFIG_MQTT_BROKER_PORT=8883
