--- a/v2.4.0-v2.x.x/lesson8/nrf91_simple_tracker/prj.conf
+++ b/v2.4.0-v2.x.x/lesson8/nrf91_simple_tracker/prj.conf
@@ -46,4 +46,4 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # CoAP
 CONFIG_COAP=y
-CONFIG_COAP_DEVICE_NAME="cali.hei.nrf9160"
+CONFIG_COAP_DEVICE_NAME="<insert_name_here>"
