Added CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT to prj.conf

--- a/v2.2.0-v2.3.0/lesson5/cellfund_less5_exer1/prj.conf
+++ b/v2.2.0-v2.3.0/lesson5/cellfund_less5_exer1/prj.conf
@@ -30,6 +30,7 @@ CONFIG_NRF_MODEM_LIB=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 
 # CoAP 
 # STEP 2.1 - Enable the CoAP library
