--- a/v2.2.0-v2.3.0/lesson5/cellfund_less5_exer2_solution/prj.conf
+++ b/v2.2.0-v2.3.0/lesson5/cellfund_less5_exer2_solution/prj.conf
@@ -32,6 +32,7 @@ CONFIG_MODEM_KEY_MGMT=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 
 # CoAP 
 CONFIG_COAP=y
