--- a/v2.2.0-v2.3.0/lesson7/cellfund_less7_exer1/prj.conf
+++ b/v2.2.0-v2.3.0/lesson7/cellfund_less7_exer1/prj.conf
@@ -33,6 +33,7 @@ CONFIG_MODEM_KEY_MGMT=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 CONFIG_LTE_EDRX_REQ=y
 # Request PSM periodic TAU 8 hours and active time 16 seconds
 CONFIG_LTE_PSM_REQ_RPTAU="00101000"
