Use mqtt.nordicsemi.academy MQTT server instead of test.mosquitto.org

--- a/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer1/Kconfig
+++ b/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer1/Kconfig
@@ -24,7 +24,7 @@ config MQTT_CLIENT_ID
 
 config MQTT_BROKER_HOSTNAME
 	string "MQTT broker hostname"
-	default "test.mosquitto.org"
+	default "mqtt.nordicsemi.academy"
 
 config MQTT_BROKER_PORT
 	int "MQTT broker port"
