--- a/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer2/prj.conf
+++ b/v2.4.0-v2.x.x/lesson4/cellfund_less4_exer2/prj.conf
@@ -42,6 +42,6 @@ CONFIG_MQTT_CLEAN_SESSION=y
 CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
 CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
 CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from nRF91 Series device"
-CONFIG_MQTT_BROKER_HOSTNAME="test.mosquitto.org"
+CONFIG_MQTT_BROKER_HOSTNAME="mqtt.nordicsemi.academy"
 # STEP 2.2 - Change the MQTT broker port
 CONFIG_MQTT_BROKER_PORT=1883
