--- a/v2.8.x-v2.7.0/l5/l5_e1_sol/Kconfig
+++ b/v2.8.x-v2.7.0/l5/l5_e1_sol/Kconfig
@@ -21,7 +21,16 @@ config COAP_RX_RESOURCE
 	string "CoAP resource - this is the RX channel of the board"
 	default "validate"
 
+config DK
+	bool "nRF9151 DK, nRF9161 DK or nRF9160 DK"
+	default y if (BOARD_NRF9160DK_NRF9160_NS) || (BOARD_NRF9161DK_NRF9161_NS) || (BOARD_NRF9151DK_NRF9151_NS)
+
+config THINGY
+	bool "Thingy:91 X or Thingy:91"
+	default y if (BOARD_THINGY91_NRF9160_NS) || (BOARD_THINGY91X_NRF9151_NS)
+	
 endmenu
+
 
 menu "Zephyr Kernel"
 source "Kconfig.zephyr"
