--- a/v2.8.x-v2.7.0/l5/l5_e2/Kconfig
+++ b/v2.8.x-v2.7.0/l5/l5_e2/Kconfig
@@ -25,6 +25,14 @@ config COAP_RX_RESOURCE
 
 # STEP 2.2 - Define the PSK Secret configuration
 
+config DK
+	bool "nRF9151 DK, nRF9161 DK or nRF9160 DK"
+	default y if (BOARD_NRF9160DK_NRF9160_NS) || (BOARD_NRF9161DK_NRF9161_NS) || (BOARD_NRF9151DK_NRF9151_NS)
+
+config THINGY
+	bool "Thingy:91 X or Thingy:91"
+	default y if (BOARD_THINGY91_NRF9160_NS) || (BOARD_THINGY91X_NRF9151_NS)
+	
 endmenu
 
 menu "Zephyr Kernel"
