Added Thingy:91 X and new version directory

--- a/v2.8.x-v2.7.0/l7/l7_e1/prj.conf
+++ b/v2.8.x-v2.7.0/l7/l7_e1/prj.conf
@@ -32,6 +32,8 @@ CONFIG_MODEM_KEY_MGMT=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
+CONFIG_LTE_LC_EDRX_MODULE=y
+CONFIG_LTE_LC_PSM_MODULE=y
 CONFIG_LTE_EDRX_REQ=y
 # Request PSM periodic TAU 8 hours and active time 16 seconds
 CONFIG_LTE_PSM_REQ_RPTAU="00101000"
