--- a/v2.8.x-v2.7.0/l8/l8_sol/prj.conf
+++ b/v2.8.x-v2.7.0/l8/l8_sol/prj.conf
@@ -33,6 +33,8 @@ CONFIG_MODEM_KEY_MGMT=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
+CONFIG_LTE_LC_EDRX_MODULE=y
+CONFIG_LTE_LC_PSM_MODULE=y
 
 # AT commands interface
 CONFIG_AT_HOST_LIBRARY=n
