--- a/v2.8.x-v2.7.0/l6/l6_e2/prj.conf
+++ b/v2.8.x-v2.7.0/l6/l6_e2/prj.conf
@@ -33,6 +33,8 @@ CONFIG_NRF_MODEM_LIB=y
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
 
-# STEP 7.1 - Request eDRX from the network
+# STEP 7.1 (For v2.8.0 only) Enable eDRX and PSM module
 
-# STEP 7.2 - Request PSM periodic TAU and active time
+# STEP 7.2 - Request eDRX from the network
+
+# STEP 7.3 - Request PSM periodic TAU and active time
