--- a/v2.8.x-v2.7.0/l6/l6_e2_sol/prj.conf
+++ b/v2.8.x-v2.7.0/l6/l6_e2_sol/prj.conf
@@ -32,8 +32,13 @@ CONFIG_NRF_MODEM_LIB=y
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
-# STEP 7.1 - Request eDRX from the network
+
+# STEP 7.1 (For v2.8.0 only) Enable eDRX and PSM module
+CONFIG_LTE_LC_EDRX_MODULE=y
+CONFIG_LTE_LC_PSM_MODULE=y
+
+# STEP 7.2 - Request eDRX from the network
 CONFIG_LTE_EDRX_REQ=y
-# STEP 7.2 - Request PSM periodic TAU and active time
+# STEP 7.3 - Request PSM periodic TAU and active time
 CONFIG_LTE_PSM_REQ_RPTAU="00101000"
 CONFIG_LTE_PSM_REQ_RAT="00001000"
