--- a/v2.8.x-v2.7.0/l6/l6_e2_sol/prj.conf
+++ b/v2.8.x-v2.7.0/l6/l6_e2_sol/prj.conf
@@ -33,7 +33,7 @@ CONFIG_NRF_MODEM_LIB=y
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT_GPS=y
 
-# STEP 7.1 (For v2.8.0 only) Enable eDRX and PSM module
+# STEP 7.1 (For v2.8.0 and higher only) Enable eDRX and PSM module
 CONFIG_LTE_LC_EDRX_MODULE=y
 CONFIG_LTE_LC_PSM_MODULE=y
 
