--- a/.github/workflows/cell_fund.yml
+++ b/.github/workflows/cell_fund.yml
@@ -37,4 +37,4 @@ jobs:
     - name: image pull
       run: docker pull ghcr.io/lukaszbielaknordicsemi/nordicplayground/nrfconnect-sdk:${{ inputs.sdk }}
     - name: build sample
-      run: docker run  --rm -v ${PWD}/cell-fund:/workdir/project -w /workdir/project/v2.8.x-v2.7.0 ghcr.io/lukaszbielaknordicsemi/nordicplayground/nrfconnect-sdk:${{ inputs.sdk }}  west build ${{ matrix.project }} -b ${{ matrix.board }} --build-dir ${{ matrix.project }}/build
+      run: docker run  --rm -v ${PWD}/cell-fund:/workdir/project -w /workdir/project/v2.9.0-v2.7.0 ghcr.io/lukaszbielaknordicsemi/nordicplayground/nrfconnect-sdk:${{ inputs.sdk }}  west build ${{ matrix.project }} -b ${{ matrix.board }} --build-dir ${{ matrix.project }}/build
