--- a/v2.9.0-v2.7.0/l3/l3_e1_sol/prj.conf
+++ b/v2.9.0-v2.7.0/l3/l3_e1_sol/prj.conf
@@ -17,6 +17,7 @@ CONFIG_NET_NATIVE=n
 # STEP 2.2 - Enable and configure the BSD sockets compatible API
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
+CONFIG_POSIX_API=y
 
 # Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
