Added missing Kconfig POSIX_API

--- a/l6/l6_e2/prj.conf
+++ b/l6/l6_e2/prj.conf
@@ -12,7 +12,6 @@ CONFIG_DK_LIBRARY=y
 
 # Newlib
 CONFIG_NEWLIB_LIBC=y
-# STEP 2.2 - Enable printing of floating-points
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
 
@@ -21,6 +20,7 @@ CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
+CONFIG_POSIX_API=y
 
 # Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
