Changed to use MQTT helper library

--- a/l4/l4_e1_sol/prj.conf
+++ b/l4/l4_e1_sol/prj.conf
@@ -32,14 +32,10 @@ CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 
 # MQTT
-# STEP 2.1 - Enable and configure the MQTT library
-CONFIG_MQTT_LIB=y
+# STEP 2.1 - Enable and configure the MQTT helper library 
+CONFIG_MQTT_HELPER=y
 CONFIG_MQTT_CLEAN_SESSION=y
 
-# Application
-# STEP 2.2 - Configure the broker name, TCP port, topic names, and message
-CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
-CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
-CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from the nRF91 Series device"
-CONFIG_MQTT_BROKER_HOSTNAME="mqtt.nordicsemi.academy"
-CONFIG_MQTT_BROKER_PORT=1883
+# STEP 2.2 - Set the MQTT topics
+CONFIG_MQTT_SAMPLE_PUB_TOPIC="devacademy/publish/topic"
+CONFIG_MQTT_SAMPLE_SUB_TOPIC="devacademy/subscribe/topic"
