--- a/l4/l4_e2/prj.conf
+++ b/l4/l4_e2/prj.conf
@@ -16,8 +16,8 @@ CONFIG_NEWLIB_LIBC=y
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
-CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
+CONFIG_NET_SOCKETS=y
 CONFIG_POSIX_API=y
 
 # Memory
@@ -34,14 +34,14 @@ CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 
 # MQTT
-CONFIG_MQTT_LIB=y
+CONFIG_MQTT_HELPER=y
 CONFIG_MQTT_CLEAN_SESSION=y
 # STEP 2.1 - Enable TLS for the MQTT library
 
-# Application
-CONFIG_MQTT_PUB_TOPIC="devacademy/publish/topic"
-CONFIG_MQTT_SUB_TOPIC="devacademy/subscribe/topic"
-CONFIG_BUTTON_EVENT_PUBLISH_MSG="Hi from nRF91 Series device"
-CONFIG_MQTT_BROKER_HOSTNAME="mqtt.nordicsemi.academy"
-# STEP 2.2 - Change the MQTT broker port
-CONFIG_MQTT_BROKER_PORT=1883
+# STEP 2.2 Enable and configure mbedTLS library
+
+
+CONFIG_MQTT_SAMPLE_PUB_TOPIC="devacademy/publish/topic"
+CONFIG_MQTT_SAMPLE_SUB_TOPIC="devacademy/subscribe/topic"
+
+# STEP 3 - Configure the certificate in the MQTT helper library
