--- a/l4/l4_e1/prj.conf
+++ b/l4/l4_e1/prj.conf
@@ -32,7 +32,6 @@ CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_NETWORK_MODE_LTE_M_NBIOT=y
 
 # MQTT
-# STEP 2.1 - Enable and configure the MQTT library
+# STEP 2.1 - Enable and configure the MQTT helper library 
 
-# Application
-# STEP 2.2 - Configure the broker name, TCP port, topic names, and message
+# STEP 2.2 - Set the MQTT topics
