Changed to use MQTT helper library

--- a/l4/l4_e2/prj.conf
+++ b/l4/l4_e2/prj.conf
@@ -10,8 +10,6 @@ CONFIG_LOG=y
 # Button and LED support
 CONFIG_DK_LIBRARY=y
 
-# Newlib
-CONFIG_NEWLIB_LIBC=y
 
 # Networking
 CONFIG_NETWORKING=y
@@ -38,7 +36,7 @@ CONFIG_MQTT_HELPER=y
 CONFIG_MQTT_CLEAN_SESSION=y
 # STEP 2.1 - Enable TLS for the MQTT library
 
-# STEP 2.2 Enable and configure mbedTLS library
+# STEP 2.2 Enable TLS related configs
 
 
 CONFIG_MQTT_SAMPLE_PUB_TOPIC="devacademy/publish/topic"
