--- a/l4/l4_e2_sol/prj.conf
+++ b/l4/l4_e2_sol/prj.conf
@@ -10,8 +10,6 @@ CONFIG_LOG=y
 # Button and LED support
 CONFIG_DK_LIBRARY=y
 
-# Newlib
-CONFIG_NEWLIB_LIBC=y
 
 # Networking
 CONFIG_NETWORKING=y
@@ -41,9 +39,10 @@ CONFIG_MQTT_CLEAN_SESSION=y
 CONFIG_MQTT_LIB_TLS=y
 
 #TLS
-# STEP 2.2 Enable and configure mbedTLS library
+# STEP 2.2 Enable TLS related configs
 CONFIG_MBEDTLS=y
-CONFIG_MBEDTLS_RSA_C=y
+CONFIG_TLS_CREDENTIALS=y
+
 
 CONFIG_MQTT_SAMPLE_PUB_TOPIC="devacademy/publish/topic"
 CONFIG_MQTT_SAMPLE_SUB_TOPIC="devacademy/subscribe/topic"
