--- a/l4/l4_e2_sol/Kconfig
+++ b/l4/l4_e2_sol/Kconfig
@@ -18,9 +18,8 @@ config MQTT_SAMPLE_CLIENT_ID
 	string "MQTT Client ID"
 	help
 	  Use a custom Client ID string. If not set, the client ID will be
-	  generated based on IMEI number (for nRF91 Series based targets) or
+	  generated based on the IMEI number (for nRF91 Series based targets) or
 	  randomly (for other platforms).
-	default ""
 
 config MQTT_SAMPLE_BROKER_HOSTNAME
 	string "MQTT broker hostname"
